--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header .navbar-collapse  ul.navbar-nav {
 }
 
 header .navbar-default{
-    background-color: #FFFFFF; 
+    background-color: #440060; 
 }
 
 header .nav li a:hover,
@@ -124,7 +124,7 @@ header .navbar-default .navbar-nav > .open > a:focus {
 
 
 header .navbar {
-    min-height: 70px; 
+    min-height: 10px; 
 	padding:18px 0;
 }
 
@@ -134,8 +134,8 @@ header .navbar-nav > li  {
 }
 
 header  .navbar-nav > li > a {
-    padding-bottom: 6px;
-    padding-top: 5px;
+    padding-bottom: 2px;
+    padding-top: 2px;
     margin-left: 2px;
     line-height: 30px;
 	font-weight: 700;
@@ -214,7 +214,7 @@ header ul.nav li ul li a {
 
 
 .navbar .nav > li > a {
-  color: #6C6C6C;
+  color: #fff;
   text-shadow: none;
   /* border: 1px solid rgba(255, 255, 255, 0) !important; */
 }
@@ -300,7 +300,6 @@ display: inline-block;
 }
 #featured .flexslider:after {
 content:'';
-background: rgba(17, 218, 180, 0.67);
 position:absolute;
 top:0px;
 z-index:6;
@@ -315,7 +314,7 @@ right:0px;
 }
 .flex-caption {zoom: 1;
 bottom: 35px; background-color: transparent; color: #fff; margin: 0; padding: 25px 25px 25px 30px; position: absolute; left: 10%; right:0px; }
-.flex-caption h3 {color: #FFFFFF; letter-spacing: 1px; margin-bottom: 8px; text-transform: uppercase;font-size: 36px;}
+.flex-caption h3 {color: #d5cdd8; letter-spacing: 1px; margin-bottom: 8px; text-transform: uppercase;font-size: 36px;}
 .flex-caption p {margin: 0 0 15px;}
 .skill-home{
 margin-bottom:50px;
@@ -371,7 +370,7 @@ width: 100%;
 .testi-icon-area .quote {
 padding: 15px 0 0 0;
 margin: 0 0 0 0;
-background: #ffffff;
+background: #d5cdd8;
 text-align: center;
 color: #2FADDE;
 display: inline-table;
@@ -420,8 +419,8 @@ section.callaction {
 
 #content {
 	position:relative;
-	background:#fff;
-	padding:50px 0 0px 0;
+	background:#d5cdd8;
+	padding:10px 10px 10px 20px;
 }
 
 #content img {
@@ -443,7 +442,7 @@ section.callaction {
 	width: 100%;
 }
 .box-gray  {
-	background: #f8f8f8;
+	background: #d5cdd8;
 	padding: 20px 20px 30px;
 }
 .box-gray  h4,.box-gray  i {
@@ -548,14 +547,11 @@ ul.breadcrumb li a:hover {
 ============================ */
 .content_white {
 text-align: center;
-padding: 3em 0;
-}
-.content_white {
-text-align: center;
-padding: 3em 0;
+background-color: #d5cdd8;
+padding: 10px 30px;
 }
 .featured_content {
-background: #f6f6f6;
+background: #d5cdd8;
 width:100%;
 padding:60px 0;
 }
@@ -565,7 +561,7 @@ border: 1px solid #0A6352;
 border-radius: 50%;
 width: 85px;
 height: 85px;
-background: rgb(255, 255, 255);
+background: #d5cdd8;
 padding-top: 22px;
 }
 .featured_content h3 a{
@@ -582,11 +578,11 @@ margin-bottom: 1em;
 
 .feature_btn {
 display: inline-block;
-padding: 6px 20px;
-font-size: 1em;
+padding: 10px 40px;
+font-size: 2em;
 cursor: pointer;
-border: 1px solid #E6E6E6;
-background: #37907F;
+border: 2px solid #000000;
+background: #440060;
 color: #FFF;
 font-weight: 500;
 text-decoration: none;
@@ -841,7 +837,7 @@ border-radius: 2px;
 }
 .panel {
 margin-bottom: 18px;
-background-color: #F4F4F4;
+background-color: #d5cdd8;
 border: 1px solid transparent;
 border-radius: 2px;
 -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
@@ -870,19 +866,19 @@ box-shadow: inset 0 0 2px rgba(0,0,0,.1);
 overflow: hidden;
 height: 18px;
 margin-bottom: 18px;
-background-color: #f5f5f5;
+background-color: #d5cdd8;
 border-radius: 2px;
 -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 }
 .progress .progress-bar.progress-bar-red {
-background: #ed5441;
+background: #d5cdd8;
 } 
 .progress .progress-bar.progress-bar-green {
-background: #51d466;
+background: #d5cdd8;
 }
 .progress .progress-bar.progress-bar-lblue {
-background: #32c8de;
+background: #d5cdd8;
 }
 /* --- portfolio detail --- */
 .top-wrapper {
@@ -981,13 +977,13 @@ ul.link-list li{
 	list-style:none;
 }
 footer{
-background: #046E5A;
+background: #d5cdd8;
 }
 footer ul.link-list li a{
-	color:#fff;
+	color:#d5cdd8;
 }
 footer ul.link-list li a:hover {
-	color:#eee;
+	color:#d5cdd8;
 }
 /* --- Heading style --- */
 
@@ -1039,7 +1035,7 @@ footer .widget .social-network {
 
 }
 .box-area{
-border: 1px solid #E7E7E7;
+border: 1px solid #d5cdd8;
 padding:0 15px;
 padding-top: 41px;
 margin-top: -42px;
@@ -1073,7 +1069,7 @@ ul.team-detail{
 }
 
 ul.team-detail li{
-	border-bottom:1px dotted #e9e9e9;
+	border-bottom:1px dotted #d5cdd8;
 	margin:0 0 15px 0;
 	padding:0 0 15px 0;
 	list-style:none;
@@ -1090,7 +1086,7 @@ ul.team-detail li h4, ul.team-detail li label{
 ul.team-detail li ul.social-network {
 	border:none;
 	margin:0;
-	padding:0;
+	padding: 20px;;
 }
 
 ul.team-detail li ul.social-network li {
@@ -1173,7 +1169,7 @@ color: #222;
 }
  .pricing-box-item {
 border: 1px solid #e6e6e6;
-	background:#fcfcfc;
+	background:#d5cdd8;
 	position:relative;
 	margin:0 0 20px 0;
 	padding:0;
@@ -1186,13 +1182,13 @@ border: 1px solid #e6e6e6;
 }
 
 .pricing-box-item .pricing-heading {
-	background: #fcfcfc;
+	background: #d5cdd8;
 	text-align: center;
 	padding:0px 0 0px 0;
 	display:block;
 }
 .pricing-box-item.activeItem .pricing-heading {
-	background: #fcfcfc;
+	background: #d5cdd8;
 	text-align: center;
 	padding:0px 0 1px 0;
 	border-bottom:none;
@@ -1296,7 +1292,7 @@ footer .widget .flickr_badge img {
   
 footer{
 	padding:50px 0 0 0;
-	color:#f8f8f8;
+	color:#d5cdd8;
 }
 
 footer a {
@@ -1335,7 +1331,7 @@ ul.social-network li {
 	padding:0;
 	padding-top:30px;
 	margin:20px 0 0 0;
-	background: #002821;
+	background: #440060;
 }
 
 #sub-footer p{
