--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@ font-weight: 500;
 text-decoration: none;
 outline: none;
 margin-top: 10px;
-/* border-radius: 5px; */
+border-radius: 10px;
 }
 /* Forms
 ============================= */
